--- a/output/projects/iidgr_reports.html
+++ b/output/projects/iidgr_reports.html
@@ -12,20 +12,26 @@
 
 			<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-			<link rel="stylesheet" type="text/css" media="screen" href="/css/all-1370472101000.css"> 
+			<link rel="stylesheet" type="text/css" media="screen" href="/css/all-1370789715000.css"> 
     </head>
 
     <body>
-
-<header>
+<div class="contact">
+    <ul>
+        <li><img src="../img/email_icon.png"/><span> contact [at] emiltalevdesign.co.uk </span></li>
+        <li><img src="../img/phone_icon.png"/><span> +44 (0)7726 150137 </span></li>
+        <li><img src="../img/skype_icon.png"/><span> etdesign_london </span></li>
+        <li><img src="../img/linkedin_icon.png"/><a href="http://uk.linkedin.com/pub/emil-talev/1a/116/500/" target="_blank"><span> LinkedIn</span></a></li>
+    </ul>
+</div><header>
     <ul class="header">
-        <li><img src="&#x2F;img&#x2F;et_logo_web.png"/></li>
+        <li><a href="../index.html"><img src="&#x2F;img&#x2F;et_logo_web.png"/></a></li>
         <li><img src="&#x2F;img&#x2F;et_name_header.png"/></li>
         <li><a href="../index.html" />WORK</a></li>
         <li><a href="../about.html" />ABOUT</a></li>
-        <li><a href="" />CONTACT</a></li>
+        <li><a href="#" id="contact" />CONTACT</a></li>
     </ul>
-</header><div class="content">
+</header><div class="about_content">
  <div class="proj_image">
        <img src="&#x2F;img&#x2F;proj1_img1.jpg" />
        <img src="&#x2F;img&#x2F;proj1_img2.jpg" />
@@ -35,9 +41,19 @@
     <div class="proj_name">
         <h3> IIDGR Reports </h3>
     </div>
+    <ul class="nav_list">
+        <li><a href="iidgr_branding.html">PREVIOUS</a></li>
+        <li>|</li>
+        <li><a href="clean_air_london.html">NEXT</a></li>
+        <li>|</li>
+        <li><a href="../index.html">BACK TO GALLERY</a></li>
+    </ul>
     <div class="description" />
         <h4> DESCRIPTION </h4>
-        <span> IIDGR, part of the De Beers Group of Companies, issues reports to its customers after grading their diamonds. This makes the grading report the brand’s most important piece of communication. Competition, industry standards, technical limitations and feedback from clients, stakeholders and focus groups were taken into account while developing the design solution. Two report designs were developed for use in different circumstances. </span>
+            <p> The International Institute of Diamond Grading &amp; Research, part of the De Beers Group of Companies, issues reports to its customers after grading their diamonds. </p>
+            <p> This makes the grading report the brand’s most important piece of communication. </p>
+            <p> Competition, industry standards, technical limitations and feedback from clients, stakeholders and focus groups were taken into account while developing the design solution. </p>
+            <p> Two report designs were developed for use in different circumstances. </p>
     </div>
     <div class="components">
         <h4> PROJECT COMPONENTS </h4>
@@ -47,10 +63,26 @@
         </ul>
     </div>
     <div class="proj_navigation">
-        <ul>
-            <li>HOME</li>
-            <li> &lt;PREVIOUS </li>
-            <li> NEXT&gt; </li>
+        <h4>OTHER PROJECTS</h4>
+        <ul class="nav_list">
+            <li><a href="iidgr_branding.html">PREVIOUS</a></li>
+            <li>|</li>
+            <li><a href="clean_air_london.html">NEXT</a></li>
+            <li>|</li>
+            <li><a href="../index.html">BACK TO GALLERY</a></li>
+        </ul>
+        <ul class="other_projects">
+                <li class=""><a href="iidgr_branding.html">IIDGR Branding</a></li>
+                <li class="current_proj"><a href="iidgr_reports.html">IIDGR Reports</a></li>
+                <li class=""><a href="clean_air_london.html">Clean Air London</a></li>
+                <li class=""><a href="fs_web_designs.html">Falcon Scott Web Designs</a></li>
+                <li class=""><a href="open_can.html">Open Can</a></li>
+                <li class=""><a href="wars_of_fortune.html">Wars of Fortune</a></li>
+                <li class=""><a href="db_branding.html">De Beers Branding</a></li>
+                <li class=""><a href="trustees_report.html">Trustees Annual Report</a></li>
+                <li class=""><a href="kk_animation.html">Krispy Kreme Animation</a></li>
+                <li class=""><a href="diamdel.html">Diamdel</a></li>
+                <li class=""><a href="in_the_loupe.html">In The Loupe</a></li>
         </ul>
     </div>
  </div>
@@ -61,8 +93,32 @@
 
 			<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 		    <script>
-                function goto(cl, t) {
-                    $('.pages_wrapper').animate({"left":-($(cl).position().left)}, 400);
+                $(document).ready(function(){
+                    $('#first_page').live("click",function(){
+                        $('.pages_wrapper').animate({"left":-($('.page_one').position().left)}, 400);
+                        $('#one_dark').toggle();
+                        $('#one_light').toggle();
+                        $('#two_dark').toggle();
+                        $('#two_light').toggle();
+                    });
+                    $('#second_page').live("click", function(){
+                        $('.pages_wrapper').animate({"left":-($('.page_two').
+                            position().left)}, 400);
+                        $('#one_dark').toggle();
+                        $('#one_light').toggle();
+                        $('#two_dark').toggle();
+                        $('#two_light').toggle();
+                    });
+                    $('#contact').click(contact);
+                });
+                
+                function contact() {
+                    $('.contact').toggle();
+                    if(!$('.contact').is(':visible')) {
+                        $('#contact').css("color","#959595");
+                    } else {
+                        $('#contact').css("color","black");
+                    }
                 }
             </script>
 		</body>
